--- a/NEW-MAIN SHIT SONG/app/index.html
+++ b/NEW-MAIN SHIT SONG/app/index.html
@@ -7,10 +7,11 @@
 <link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
 <script type="text/javascript" src="Home.js">
 
+
 </script>
 <style>
-  body { margin:0; padding:0; }
-  #map { position:absolute; top:0; bottom:0; width:100%; }
+  /*body { margin:0; padding:0; }
+  #map { position:absolute; top:0; bottom:0; width:100%; }*/
 </style>
 </head>
 <body>
@@ -18,7 +19,7 @@
   <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/L.Control.Locate.mapbox.css' rel='stylesheet' />
 
   <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/css/font-awesome.min.css' rel='stylesheet' />
-<div id='map'></div>
+<div id='map' style= "height:400px; padding:500px; margin-top:10%;"></div>
 
 <script>
 
