--- a/DREWMAIN/app/index.html
+++ b/DREWMAIN/app/index.html
@@ -3,26 +3,18 @@
 <meta charset=utf-8 />
 <title>Plain Leaflet API</title>
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+
 <script src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
 <link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
-<script type="text/javascript" src="Home.js">
+  </script>
+    <style>  body { margin:0; padding:0; }
+            #map { position:absolute; top:0; bottom:0; margin-top: 5; width:100%; }
+    </style>
+
+      </head>
+          <body>
+              <div id='map'></div>
 
 
-</script>
-<style>
-  /*body { margin:0; padding:0; }
-  #map { position:absolute; top:0; bottom:0; width:100%; }*/
-</style>
-</head>
-<body>
-  <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/L.Control.Locate.min.js'></script>
-  <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/L.Control.Locate.mapbox.css' rel='stylesheet' />
-
-  <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/css/font-awesome.min.css' rel='stylesheet' />
-<div id='map' style= "height:400px; padding:500px; margin-top:10%;"></div>
-
-<script>
-
-</script>
 </body>
 </html>
