--- a/DREWMAIN/app/index.html
+++ b/DREWMAIN/app/index.html
@@ -8,12 +8,12 @@
 <link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
   </script>
     <style>  body { margin:0; padding:0; }
-            #map { position:absolute; top:0; bottom:0; margin-top: 5; width:100%; }
+            #map { position:absolute; top:0; bottom:0; margin-top: 5%; width:100%; }
     </style>
 
       </head>
           <body>
-              <div id='map'></div>
+              <div id='app'></div>
 
 
 </body>
