--- a/DREWMAIN/app/index.html
+++ b/DREWMAIN/app/index.html
@@ -1,20 +1,15 @@
 <html>
-<head>
-<meta charset=utf-8 />
-<title>Plain Leaflet API</title>
-<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-
-<script src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
-<link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
-  </script>
-    <style>  body { margin:0; padding:0; }
-            #map { position:absolute; top:0; bottom:0; margin-top: 5%; width:100%; }
-    </style>
+  <head>
+    <meta charset=utf-8 />
+        <title>FINAL PROJECT</title>
+            <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+            <script src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
+            <link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
 
       </head>
           <body>
+
               <div id='app'></div>
 
-
-</body>
+    </body>
 </html>
