--- a/DREWMAIN/app/index.html
+++ b/DREWMAIN/app/index.html
@@ -8,8 +8,9 @@
 
       </head>
           <body>
-
               <div id='app'></div>
+              <pre id='output' class='ui-output'></pre>
+
 
     </body>
 </html>
